# kolme-rare-evo-demo

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  guess-game.yml  rng-server.yaml
devops/: .terraform.lock.hcl  alb.tf  amber.yaml  bastion.tf  data.tf  ecs.tf  ecs_public_nlb.tf  justfile  locals.tf  nlb.tf  outputs.tf  public_apps.tf  public_nlb_apps.tf  rds.tf  route53.tf  terraform.tf  variables.tf
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  client.ts  index.css  kolmeclient.ts  main.tsx
frontend/src/api/: gameApi.ts
frontend/src/components/BetHistory/: Index.tsx
frontend/src/components/Card/: Index.tsx
frontend/src/components/ClaimFunds/: Index.tsx
frontend/src/components/Content/: Index.tsx
frontend/src/components/Footer/: Index.tsx
frontend/src/components/Header/: Index.tsx
frontend/src/components/Leaderboard/: Index.tsx
frontend/src/components/NewUser/: Index.tsx
frontend/src/components/UserSwitcher/: Index.tsx
frontend/src/components/WalletConnection/: Index.tsx
frontend/src/config/: chains.ts
frontend/src/hooks/: useAutoDismiss.ts  useGameActions.ts  useGameData.ts  useUserFunds.ts  useWallet.ts
frontend/src/types/: global.d.ts
guess-game/: .gitignore  Cargo.toml  Dockerfile  justfile  solutions.md  solutions.txt
guess-game/src/: api.rs  app.rs  bot.rs  cli.rs  indexer.rs  main.rs  rng_server.rs  state.rs  time.rs
rng-server/: Cargo.toml  Dockerfile  justfile
rng-server/src/: main.rs
