[package]
name = "guess-game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["env", "derive"] }
kolme = { git = "https://github.com/fpco/kolme", rev = "9715a5495fcf448c202033ff774faadd164634d7" }
reqwest = { version = "0.12.22", features = ["rustls-tls-webpki-roots", "json", "gzip", "brotli", "blocking"], default-features = false }
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
