[package]
name = "rng-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive", "env"] }
hex = "0.4.3"
hmac = "0.12.1"
k256 = "0.13.4"
rand_core = "0.6.4"  # k256 released version is compatible with this. So sticking with old version.
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
